# rust-learning-projects

./: .gitignore  README.md
todo_cli/: .gitignore  Cargo.toml  todo.json
todo_cli/src/: lib.rs  main.rs
todo_cli/tests/: integration.rs
vid_player/: Cargo.toml
vid_player/src/: main.rs
wgpu_rust/: Cargo.toml  build.rs  index.html
wgpu_rust/assets/: index.html
wgpu_rust/src/: app.rs  graphics.rs  input.rs  lib.rs  main.rs  model.rs  pipeline.rs  resources.rs  shader.wgsl  state.rs
wgpu_rust/src/graphics/: buffers.rs  camera.rs  camera_controller.rs  instance.rs  light.rs  pipeline.rs  texture.rs  vertex.rs
wgpu_rust/src/graphics/shaders/: shader.wgsl
