[package]
name = "wgpu_rust"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true


[dependencies]
anyhow = "1.0"
winit = "0.30"
env_logger = "0.10"
log = "0.4"
wgpu = "28.0"
pollster = "0.3"
bytemuck = {version = "1.24", features = ["derive"]}
cgmath = "0.18"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]