[package]
name = "wgpu_rust"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true


[dependencies]
anyhow = "1.0"
winit = "0.30"
env_logger = "0.10"
log = "0.4"
wgpu = "28.0"
pollster = "0.3"
bytemuck = {version = "1.24", features = ["derive"]}
cgmath = "0.18"
tobj = { version = "3.2", default-features = false, features = ["async"]}

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"